release: bump version to 1.2.150-b11 and update documentation suite
- Set project version to 1.2.150-b11 in build.gradle.kts
- Mark previous versions (1.1.150-b11, 1.0.150-b11, 1.0.150) as pre-test in CHANGELOG.md and release notes
- Update full documentation suite covering download manager, macOS JBR 25 layout, symlink extraction, and Java 17/21+ module opener
- Update Maven Central badge, quickstart dependencies, and distribution guides